test/lambda/negative/semantic/undefined_function.ls
// @expect-error: E202
// @description: Undefined function call

let x = foo(1, 2, 3)
